--- a/phpcms/phpcms/templates/master/content/header.html
+++ b/phpcms/phpcms/templates/master/content/header.html
@@ -1,70 +1,134 @@
-﻿<?php defined('IN_PHPCMS') or exit('No permission resources.'); ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0018)https://333av.vip/ -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link rel="dns-prefetch" href="https://img.361lu.com/">
-<link rel="dns-prefetch" href="https://dup.baidustatic.com/">
-<script src="<?php echo TPL_STATIC_PATH;?>hm.js "></script><script src="<?php echo TPL_STATIC_PATH;?>uaredirect.js " type="text/javascript"></script>
-
+<!DOCTYPE html>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>gocms</title>
+<meta name="keywords" content="网站建设，自助建站，免费网站，免费建站，免费做网站，网页制作，网站模板">
+<meta name="description" content="">
+<meta name="copyright" content="gocms">
+<meta name="360-site-verification" content="3a153d6b45e5c635be20cb2a8eff6149">
+<meta property="wb:webmaster" content="7d3e25852da2f717">
 <meta http-equiv="Cache-Control" content="no-transform">
-<meta name="layoutmode" content="standard">
-<title>千百撸-众里寻她千百撸，蓦然回首那人却在灯火阑珊处。</title>
-<meta name="keywords" content="千百撸,千百撸影院">
-<meta name="description" content="千百撸连续7年全国撸量遥遥领先 JJ连起来可绕地球一圈，每日更新多种类型电影图片和小说 激情你懂得！">
-<link href="<?php echo TPL_STATIC_PATH;?>style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="<?php echo TPL_STATIC_PATH;?>style2.css">
-<script src="<?php echo TPL_STATIC_PATH;?>jquery.min.js " type="text/javascript"></script>
-<script src="<?php echo TPL_STATIC_PATH;?>iealert.min.js " type="text/javascript"></script>
-<!-- 请置于所有广告位代码之前 -->
-<script src="<?php echo TPL_STATIC_PATH;?>ds.js "></script>
-<script src="<?php echo TPL_STATIC_PATH;?>tongji.js "></script>
-<script type="text/javascript">
-$(document).ready(function() {
-$("body").iealert();
-});
+<link rel="canonical" href="">
+<link href="{TPL_STATIC_PATH}mainCss.css" rel="stylesheet" type="text/css">
+
+
+<!-- baidu stat -->
+
+<script type="text/javascript" async="" src="{TPL_STATIC_PATH}adv"></script><script charset="utf-8" src="{TPL_STATIC_PATH}lxb.js"></script><script charset="utf-8" src="{TPL_STATIC_PATH}v_002.html"></script><script type="text/javascript" async="" src="{TPL_STATIC_PATH}presadv"></script><script async="" src="{TPL_STATIC_PATH}a.js"></script><script src="{TPL_STATIC_PATH}hm_002.js"></script><script charset="utf-8" src="{TPL_STATIC_PATH}lxb_002.js"></script><script charset="utf-8" src="{TPL_STATIC_PATH}v.html"></script><script src="{TPL_STATIC_PATH}hm.js"></script><script type="text/javascript">
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?0e779bbf8fcaf2ef810d349978d4c5f0";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 </script>
-</head>
-<body style="zoom: 1;"><div id="BAIDU_DUP_fp_wrapper" style="position: absolute; left: -1px; bottom: -1px; z-index: 0; width: 0px; height: 0px; overflow: hidden; visibility: hidden; display: none;"><iframe id="BAIDU_DUP_fp_iframe" src="<?php echo TPL_STATIC_PATH;?>o.html" style="width: 0px; height: 0px; visibility: hidden; display: none;"></iframe></div>
-<div id="header">
-<div class="head">
-  <div class="top"><span title="狠狠撸改名千百撸">不是所有网站都叫千百撸</span>
-    <p><a class="wp" href="https://333av.vip/detail/guestbook.html" target="_blank">撸友留言求片</a> - <a rel="nofollow" href="https://333av.vip/detail/mobile.html" target="_blank">手机看片方法</a> - <a class="desk" rel="nofollow" href="https://333av.vip/detail/help.html" target="_blank">高速观影指南</a></p>
-  </div>
-  <div class="logo"><a title="千百撸 - 看片从这里开始!" href="https://333av.vip/"></a></div>
-  <p class="plus"><a class="ph" href="https://333av.vip/detail/hot.html">排行榜</a><a class="dq" href="https://1100.so/" target="_blank">搜索中心</a></p>
-  <div id="search">
-    <div class="ser">
-      <form action="https://1100.so/">
-        <input type="text" id="wd" name="q" class="search-input" value="" placeholder="这里输入影片关键字">
-        <select name="type" style="height:38px;margin-left:4px;font-size:16px;">
-	<option value="3" selected="selected">电影</option>
-	<option value="2">图片</option>
-	<option value="1">小说</option>
-	</select>
-        <input type="submit" class="sub" value="搜 索">
-      </form>
-    </div>
-    <p>撸中贵族 -千百撸 </p>
-  </div>
-  <div class="history"><a class="gk" rel="nofollow" href="https://333av.vip/detail/gg.html" target="_blank">网站公告</a></div>
+
+<!-- baidu stat end -->
+
+<!-- sogou stat -->
+<script type="text/javascript">
+  var _sogou_sa_q = _sogou_sa_q || [];
+  _sogou_sa_q.push(['_sid', '9936-10279']);
+ (function() {
+	var _sogou_sa_protocol = (("https:" == document.location.protocol) ? "https://" : "http://");
+	var _sogou_sa_src=_sogou_sa_protocol+"hermes.sogou.com/sa.js%3Fsid%3D9936-10279";
+	document.write(unescape("%3Cscript src='" + _sogou_sa_src + "' type='text/javascript'%3E%3C/script%3E"));
+	})();
+</script><script src="{TPL_STATIC_PATH}sa.js" type="text/javascript"></script><script src="{TPL_STATIC_PATH}lyb.js" type="text/javascript"></script>
+<!-- sogou stat end -->
+
+<!--  baidu2  -->
+</head><body class="fk-index-body"><div style="display:none;">
+<script src="{TPL_STATIC_PATH}adv.js"></script><script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fbc4ef9b2d31c2b842a6ad4a8ae06b906' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="{TPL_STATIC_PATH}h.js" type="text/javascript"></script><a href="http://tongji.baidu.com/hm-web/welcome/ico?s=bc4ef9b2d31c2b842a6ad4a8ae06b906" target="_blank"><img src="{TPL_STATIC_PATH}21.gif" width="20" height="20" border="0"></a>
 </div>
+<!--  baidu2 end -->
+
+<!-- pinyou find code start -->
+<script type="text/javascript">
+var _py = _py || [];
+_py.push(['a', 'bts..zT6q8oc8Gm5sEIfcFR_iB0']);
+_py.push(['domain','stats.ipinyou.com']);
+_py.push(['e','']);
+-function(d) {
+	var s = d.createElement('script'),
+	e = d.body.getElementsByTagName('script')[0]; e.parentNode.insertBefore(s, e),
+	f = 'https:' == location.protocol;
+	s.src = (f ? 'https' : 'http') + '://'+(f?'fm.ipinyou.com':'fm.p0y.cn')+'/j/adv.js';
+}(document);
+</script>
+<noscript><img src="//stats.ipinyou.com/adv.gif?a=bts..zT6q8oc8Gm5sEIfcFR_iB0&e=" style="display:none;"/></noscript>
+<!-- pinyou find code end -->
+
+<!-- zhihui transform code start -->
+<script type="text/javascript" src="{TPL_STATIC_PATH}page_duration.js" arguments="{'cpid':'700018814','t':'w'}" id="ad_statistic_kit"></script>
+<!--<div style="text-align:center;color:black;width:110px;line-height: 30px;background:#d9b12e"><span style="vertical-align:middle;">网站统计</span></div>-->
+<!-- zhihui transform code end -->
+<!-- 360 count start-->
+<!--<script type="text/javascript" src="http://s.union.360.cn/4092.js"></script>-->
+<!-- 360 count end -->
 
 
-<div class="newnav">
-{pc:content action="category" catid="0" num="25" siteid="$siteid" order="listorder ASC"}
-{loop $data $r}
-<div class="navmenu dy">
-    <ul>
-      <li class="homea"><a class="sdy">{$r[catname]}</a></li>
-	  <li class="item"><a href="{$r[url]}" title="{$r[catname]}" target="_blank">{$r[catname]}首页</a></li>
-	  {pc:get sql="select * from t_category where catid in ($r[arrchildid]) and catid!=$r[catid]" return="subcate"}
-　　	{loop $subcate $r2}
-		   <li class="item"><a href="{$r2[url]}" title="{$r2[catname]}" target="_blank">{$r2[catname]}</a></li>
-　　	{/loop}
-	  {/pc}
-	     
-    </ul>
-</div>
-{/loop}
-{/pc}
 
+<link href="{TPL_STATIC_PATH}index.css" rel="stylesheet" type="text/css">
+<script>
+var _hmt = _hmt || [];
+(function() {
+	var hm = document.createElement("script");
+	hm.src = "https://hm.baidu.com/hm.js?32a34c03ec1559fb22e614773c519632";
+	var s = document.getElementsByTagName("script")[0]; 
+	s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+
+
+
+<!-- header -->
+
+
+
+
+<div class="webHead">
+	<div class="head middle_new">
+		<a hidefocus="true" class="headLogo" href="#" title="网站建设专家">
+			<span class="f-img">g建站</span>
+		</a>
+
+		<div class="webNav">
+			<div class="nav navCheck nav-first">
+				<a hidefocus="true" href="#" title="凡科建站">首页</a>
+			</div>
+			<div class="nav ">
+				<a hidefocus="true" href="#">案例</a>
+			</div>
+			<div class="nav ">
+				<a hidefocus="true" href="http://jz.faisco.com/model.html" title="岂止于网站模板">模板</a>
+			</div>
+			<div class="nav ">
+				<a hidefocus="true" href="#">产品</a>
+			</div>
+			<!-- <div class="nav ">
+				<a hidefocus="true" href="http://jz.faisco.com/price.html">价格</a>
+			</div> -->
+			<div class="nav ">
+				<a hidefocus="true" href="#">加盟</a>
+			</div>
+			<div class="nav  nav-last">
+				<a hidefocus="true" href="#" onclick="logDog(4000063,12)" title="网站建设帮助">帮助</a>
+			</div>
+		</div>
+		<div class="headRight">
+			<div class="register">
+				<a hidefocus="true" class="reg fk-freeRegBtn" href="#">免费注册</a>
+			</div>
+				<a hidefocus="true" class="login fk-loginBtn" href="#" target="_blank">登录</a>
+		</div>
+	</div>
 </div>
+
