--- a/phpcms/phpcms/templates/master/content/index.html
+++ b/phpcms/phpcms/templates/master/content/index.html
@@ -57,14 +57,14 @@
             </div>
             <div class="f-sldItem">
                 <div class="f-bWrap">
-                    <a target="_blank" href="http://jz.faisco.com/proFunc.html">
-                        <img class="f-img" src="{TPL_STATIC_PATH}bnr3.jpg" alt="凡科建站优惠月">    
+                    <a target="_blank" href="">
+                        <img class="f-img" src="{TPL_STATIC_PATH}bnr3.jpg" alt="新模板上线">    
                     </a>
                 </div>
             </div>
             <div class="f-sldItem">
                 <div class="f-bWrap">
-                    <img class="f-img" src="{TPL_STATIC_PATH}bnr2.jpg" alt="今年11.11，凡科1.1亿红包等你来抢">
+                    <img class="f-img" src="{TPL_STATIC_PATH}bnr2.jpg" alt="新模板上线">
                 </div>
             </div>
         </div>
@@ -84,37 +84,37 @@
         <ul class="f-numberList">
             <li class="f-numberItem f-numberItem-siteServ">
                 <div class="f-numWrap">
-                    <span class="f-num f-siteServiceNum">14,615,165</span>
-                    <span class="f-char">+</span>
+                    <span class="f-num f-siteServiceNum">25,615,15</span>
+                    <span class="f-char">GB+</span>
                 </div>
-                <div class="f-numberDesc">网站服务</div>
+                <div class="f-numberDesc">色情视频免费提供</div>
             </li>
             <li class="f-numberItem f-numberItem-safeRun">
                 <div class="f-numberContenWrap">
                     <div class="f-numWrap">
-                        <span class="f-num">2589</span>
-                        <span class="f-char">天</span>
+                        <span class="f-num">100</span>
+                        <span class="f-char">家</span>
                     </div>            
-                    <div class="f-numberDesc">安全运行</div>    
+                    <div class="f-numberDesc">网络博彩广告商赞助</div>    
                 </div>
     
             </li>
             <li class="f-numberItem f-numberItem-cover">
                 <div class="f-numberContenWrap">
                     <div class="f-numWrap">
-                        <span class="f-num">100</span>
+                        <span class="f-num">300</span>
                         <span class="f-char">+</span>
                     </div>
-                    <div class="f-numberDesc">覆盖行业</div>
+                    <div class="f-numberDesc">网站代理好评</div>
                 </div>
             </li>
             <li class="f-numberItem f-numberItem-day">
                 <div class="f-numberContenWrap">
                     <div class="f-numWrap">
-                        <span class="f-num">7</span>
+                        <span class="f-num">2589</span>
                         <span class="f-char">天</span>
                     </div>
-                    <div class="f-numberDesc">无条件退款</div>
+                    <div class="f-numberDesc">安全运行</div>
                 </div>
             </li>
         </ul>
@@ -129,8 +129,8 @@
 <div class="fk-index-main">
     <div class="fk-index-wrap">
         <div class="fk-index-header">
-           <h2 class="f-hd-title">颠覆传统建站</h2>
-           <p class="f-hd-subDesc">为你的用户访问体验竭尽全力</p>
+           <h2 class="f-hd-title">一键建站建站</h2>
+           <p class="f-hd-subDesc">为用户提供方便色情网站建设</p>
         </div>   
         <div class="f-section">
             <ul class="f-main-list" id="mainBlcokList">
@@ -141,7 +141,7 @@
                             <div class="f-bg"></div>
                             <div class="f-infoIcon"></div>
                             <div class="f-infoWrap">
-                                <div class="f-info-title">凡科建站</div>
+                                <div class="f-info-title">小白兔建站</div>
                                 <div class="f-info-desc">免费使用，体验各种不同的风格模版</div>                                
                             </div>
                         </div>
@@ -149,8 +149,8 @@
                             <div class="f-bg"></div>
                             <!-- <div class="f-infoIcon"></div> -->
                             <div class="f-infoWrap">
-                                <div class="f-info-title">传统建站</div>
-                                <div class="f-info-desc">不低于5000，定制越多价格越高</div>                                
+                                <div class="f-info-title">自己建站</div>
+                                <div class="f-info-desc">不会技术，不会维护，</div>                                
                             </div>
                         </div>                    
                     </div>
@@ -165,21 +165,21 @@
                             <div class="f-bg"></div>
                             <div class="f-infoIcon f-infoIcon-listedBrand"></div>
                             <div class="f-infoWrap">
-                                <div class="f-info-title">凡科建站</div>
-                                <div class="f-info-desc">上市公司，知名度高，有相关资质认证和好评</div>                                
+                                <div class="f-info-title">小白兔建站</div>
+                                <div class="f-info-desc">境外大型集团，免费提供服务器，提供会员支付渠道</div>                                
                             </div>
                         </div>
                         <div class="fk-infoBlock f-infoBlock-normal">
                             <div class="f-bg"></div>
                             <!-- <div class="f-infoIcon"></div> -->
                             <div class="f-infoWrap">
-                                <div class="f-info-title">传统建站</div>
-                                <div class="f-info-desc">皮包公司多，安全风险大</div>                                
+                                <div class="f-info-title">自己建站</div>
+                                <div class="f-info-desc">国内查的严，不懂技术，很容易被有关机关查处</div>                                
                             </div>
                         </div>                    
                     </div>
                     <div class="f-infoBlock-name">
-                        上市品牌
+                        风险指数
                     </div>
                 </li>
                 <li class="f-main-item f-main-itemHover"> 
@@ -189,15 +189,15 @@
                             <div class="f-bg"></div>
                             <div class="f-infoIcon f-infoIcon-funcRich"></div>
                             <div class="f-infoWrap">
-                                <div class="f-info-title">凡科建站</div>
-                                <div class="f-info-desc">享有各类功能，性价比高，产品稳定；每周持续更新</div>                                
+                                <div class="f-info-title">小白兔建站</div>
+                                <div class="f-info-desc">享有各类功能，各种视频免费提供，产品稳定；每周持续更新，用户只管导入定价</div>                                
                             </div>
                         </div>
                         <div class="fk-infoBlock f-infoBlock-normal">
                             <div class="f-bg"></div>
                             <!-- <div class="f-infoIcon"></div> -->
                             <div class="f-infoWrap">
-                                <div class="f-info-title">传统建站</div>
+                                <div class="f-info-title">自己建站</div>
                                 <div class="f-info-desc">除基础功能外，其他功能需另外收费</div>                                
                             </div>
                         </div>                    
