--- a/phpcms/phpcms/templates/master/content/header.html
+++ b/phpcms/phpcms/templates/master/content/header.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{if isset($SEO['title']) && !empty($SEO['title'])}{$SEO['title']}{/if}{$SEO['site_title']}</title>
+<title>{SITE_NAME}</title>
 <meta name="keywords" content="{$SEO['keyword']}">
 <meta name="description" content="">
 <meta name="copyright" content="{$SEO['keyword']}">
