--- a/phpcms/phpcms/templates/master/content/list_help.html
+++ b/phpcms/phpcms/templates/master/content/list_help.html
@@ -22,7 +22,7 @@
 				<div class="f-funcBlock f-funcBlock-first">
 					<a href="/blog~214.html" target='_blank' class="f-a">
 						<div class="fk-funcIcon fk-funcIcon-prod"></div>
-						<h3 class="f-funcTitle">产品介绍</h3>
+						<h3 class="f-funcTitle">功能特色</h3>
 					</a>
 				</div>
 				<div class="f-funcBlock">
@@ -40,7 +40,7 @@
 				<div class="f-funcBlock">
 					<a href="/blog~217.html" target='_blank' class="f-a">
 						<div class="fk-funcIcon  fk-funcIcon-mobi"></div>
-						<h3 class="f-funcTitle">手机网站</h3>
+						<h3 class="f-funcTitle">网络安全</h3>
 					</a>
 				</div>
 				<div class="f-funcBlock f-funcBlock-last">
