--- a/phpcms/phpcms/templates/master/member/header.html
+++ b/phpcms/phpcms/templates/master/member/header.html
@@ -34,7 +34,7 @@
                <li class="menu-list ">
 				    <a href="javascript:void(0);"><i class="fa fa-user"></i><span>站点管理</span></a>
                     <ul class="sub-menu-list" style="display: none;">
-                        <li><a href="index.php?m=member&c=site&a=site_list">网站列表</a></li>
+                        <li><a href="index.php?m=member">网站列表</a></li>
                     </ul>
                 </li>
 				<li class="menu-list ">
