--- a/phpcms/phpcms/templates/master/member/account_manage.html
+++ b/phpcms/phpcms/templates/master/member/account_manage.html
@@ -21,7 +21,7 @@
                         </div>
                         <div class="col-sm-1" style="width: 50px;">
                             <div class="col-sm-10" style="float: right">
-                                <a class="btn btn-info" onclick="game.search_data();">查询</a>
+                                <a class="btn btn-info" onclick="site.search_data();">查询</a>
                             </div>
                         </div>
                     </form>
@@ -71,7 +71,20 @@
         }
 		
         site.search_data=function () {
-        	site.list();
+			$("#form").ajaxSubmit({
+					url: 'index.php?m=member&c=site&a=site_list',
+					data: {dosubmit: 1},
+					dataType: 'json',
+					success: function (r) {
+						console.log(r.status);
+						if (r.status == 0) {
+							$(winf).modal('hide');
+							site.list();
+						}else{
+							alert("修改失败");
+						}
+					}
+				});
         }
 		site.edit_domain=function (id) {
             $("#form").ajaxSubmit({
